@@ -2,6 +2,7 @@ ChangeLog
 
 Upcoming version
 [BUGFIX]  parse_ini_string(): Passing null to parameter #1 ($ini_string) of type string is deprecated. Thanks to medarob. https://github.com/tpwd/ke_search/issues/247
+[FEATURE] Make it possible to index multiple additional tables for a content element. https://github.com/tpwd/ke_search/issues/230
 
 Version 6.0.1, 25 October 2024
 [BUGFIX]  Add missing storage page and recursive option. Thanks to Torben Hansen. https://github.com/tpwd/ke_search/issues/251
